# web_homework8

web_homework8/: pyproject.toml
web_homework8/web_homework8/: consumer.py  docker-compose.yml  fill_db.py  models.py  producer.py  quotes.json  search.py
