[tool.poetry]
name = "web-homework8"
version = "0.1.0"
description = ""
authors = ["Taras <93609222+aps06@users.noreply.github.com>"]
readme = "README.md"
packages = [
        {include = 'my_package'}
        ]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.29.1"
faker = "^37.4.0"
pika = "^1.3.2"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

